# jankterm

./: CMakeLists.txt  Makefile  README.md  create_term  term.c
src/: create_term  keybindings.c  keybindings.h  term.c
